# dcsam

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  LICENSE  README.md  _c_make_lists_8txt.html  _d_c_continuous_factor_8h.html  _d_c_continuous_factor_8h__dep__incl.dot  _d_c_continuous_factor_8h__incl.dot  _d_c_continuous_factor_8h_source.html  _d_c_discrete_factor_8h.html  _d_c_discrete_factor_8h__dep__incl.dot  _d_c_discrete_factor_8h__incl.dot  _d_c_discrete_factor_8h_source.html  _d_c_e_m_factor_8h.html  _d_c_e_m_factor_8h__dep__incl.dot  _d_c_e_m_factor_8h__incl.dot  _d_c_e_m_factor_8h_source.html  _d_c_factor_8h.html  _d_c_factor_8h__dep__incl.dot  _d_c_factor_8h__incl.dot  _d_c_factor_8h_source.html  _d_c_factor_graph_8h.html  _d_c_factor_graph_8h__dep__incl.dot  _d_c_factor_graph_8h__incl.dot  _d_c_factor_graph_8h_source.html  _d_c_max_mixture_factor_8h.html  _d_c_max_mixture_factor_8h__dep__incl.dot  _d_c_max_mixture_factor_8h__incl.dot  _d_c_max_mixture_factor_8h_source.html  _d_c_mixture_factor_8h.html  _d_c_mixture_factor_8h__dep__incl.dot  _d_c_mixture_factor_8h__incl.dot  _d_c_mixture_factor_8h_source.html  _d_c_s_a_m_8cpp.html  _d_c_s_a_m_8cpp__incl.dot  _d_c_s_a_m_8h.html  (+157 more)
.github/workflows/: docker-ci.yml  main.yml
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c.js  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp.js  _c_make_cache_8txt.html  _c_make_files_2dcsam_8dir_2link_8txt.html  _c_make_lists_8txt.html  _c_test_cost_data_8txt.html  _d_c_continuous_factor_8h.html  _d_c_continuous_factor_8h__dep__incl.map  _d_c_continuous_factor_8h__dep__incl.md5  _d_c_continuous_factor_8h__incl.map  _d_c_continuous_factor_8h__incl.md5  _d_c_continuous_factor_8h_source.html  _d_c_discrete_factor_8h.html  _d_c_discrete_factor_8h__dep__incl.map  _d_c_discrete_factor_8h__dep__incl.md5  _d_c_discrete_factor_8h__incl.map  _d_c_discrete_factor_8h__incl.md5  _d_c_discrete_factor_8h_source.html  _d_c_factor_8h.html  _d_c_factor_8h__dep__incl.map  _d_c_factor_8h__dep__incl.md5  _d_c_factor_8h__incl.map  _d_c_factor_8h__incl.md5  _d_c_factor_8h_source.html  _d_c_factor_graph_8h.html  _d_c_factor_graph_8h__dep__incl.map  _d_c_factor_graph_8h__dep__incl.md5  _d_c_factor_graph_8h__incl.map  _d_c_factor_graph_8h__incl.md5  _d_c_factor_graph_8h_source.html  _d_c_max_mixture_factor_8h.html  _d_c_max_mixture_factor_8h__dep__incl.map  _d_c_max_mixture_factor_8h__dep__incl.md5  _d_c_max_mixture_factor_8h__incl.map  _d_c_max_mixture_factor_8h__incl.md5  _d_c_max_mixture_factor_8h_source.html  _d_c_mixture_factor_8h.html  _d_c_mixture_factor_8h__dep__incl.map  (+210 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  (+26 more)
include/dcsam/: DCContinuousFactor.h  DCDiscreteFactor.h  DCEMFactor.h  DCFactor.h  DCMaxMixtureFactor.h  DCMixtureFactor.h  DCSAM.h  DCSAM_types.h  DCSAM_utils.h  DCSumMixtureFactor.h  DiscreteMarginalsOrdered.h  DiscretePriorFactor.h  SemanticBearingRangeFactor.h  SmartDiscretePriorFactor.h  SmartSemanticBearingRangeFactor.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+13 more)
src/: DCSAM.cpp
tests/: CMakeLists.txt  testDCSAM.cpp
